amf-cli/shared/src/test/resources/upanddown/cycle/graphql/recursion/invalid/arguments-array.report
ModelId: file://amf-cli/shared/src/test/resources/upanddown/cycle/graphql/recursion/invalid/arguments-array.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
